--- a/styles/architect.css
+++ b/styles/architect.css
@@ -9,7 +9,14 @@
 }
 
 .btn-primary{
-    
+    background: #FF900E;
+    color: #FFF;
+    font-size: 1.25rem;
+    font-weight: 600;
+    cursor:pointer;
+    padding: 20px 25px;
+    border: 0;
+    border-radius: 8px;
 }
 
 
@@ -67,4 +74,38 @@ nav li a{
     font-weight: 400px;
     font-size: 1rem;
     line-height: 1.56rem;
+    margin-bottom: 25px;
+}
+
+.banner img{
+    width: 100%;
+    margin-top: 40px;
+}
+
+/*  */
+
+/* responsive media */
+
+@media screen and (max-width: 576px){
+    header{
+        padding: 5px 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 577px) and (max-width: 992px){
+    header{
+        padding: 30px 90px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1350px){
+    header{
+        padding: 50px 130px;
+    }
 }
