--- a/styles/architect.css
+++ b/styles/architect.css
@@ -19,18 +19,25 @@
     border-radius: 8px;
 }
 
+.text-light-gray{
+    color: var(--Dark-03, #727272);
+    font-size: 1rem;
+    font-weight: 400px;
+    line-height: 1.62rem;
+}
+
+.section-title{
+    font-size: 2.7rem;
+    color: var(--Dark-01, #131313);
+    font-weight: 700px;
+}
+
 
 /* haeder style */
 
 header{
     padding: 50px 240px;
     background: rgba(255, 144, 14, 0.10);
-}
-
-.nav-title{
-    font-size: 2.7rem;
-    color: var(--Dark-01, #131313);
-    font-weight: 700px;
 }
 
 header > nav{
@@ -63,6 +70,11 @@ nav li a{
     margin: 0 auto;
 }
 
+.banner-content h1{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
 .banner-title{
     color: var(--Dark-01, #131313);
     font-weight: 700px;
@@ -70,11 +82,8 @@ nav li a{
 }
 
 .banner-description{
-    color: var(--Dark-03, #727272);
-    font-weight: 400px;
-    font-size: 1rem;
     line-height: 1.56rem;
-    margin-bottom: 25px;
+    margin-bottom: 1.57rem;
 }
 
 .banner img{
@@ -85,8 +94,8 @@ nav li a{
 /* main styles */
 
 main{
-    min-width: 1440px;
-    margin: 0 auto;
+    max-width: 1440px;
+    margin: 70px auto;
 }
 
 /* teams section styles */
@@ -125,12 +134,12 @@ main{
 }
 
 .teams-description{
-    color: var(--Dark-03, #727272);
-    font-size: 1rem;
-    font-weight: 400px;
-    line-height: 1.62rem;
-    margin-bottom: 28px;
+    margin-bottom: 1.75rem;
 }
+
+/* facts section styles */
+
+
 
 /* responsive media */
 
@@ -138,22 +147,39 @@ main{
     header{
         padding: 5px 20px;
     }
-    nav{
+    nav, .teams-section{
         flex-direction: column;
     }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding: 20px 40px;
+    }
+
 }
 
 @media screen and (min-width: 577px) and (max-width: 992px){
     header{
         padding: 30px 90px;
     }
-    nav{
-        flex-direction: column;
+    nav, .teams-section{
+        flex-direction: column-reverse;
+    }
+    .teams-content{
+        padding: 20px 50px;
+        margin-bottom: 20px;
     }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1350px){
+@media screen and (min-width: 992px) and (max-width: 1370px){
     header{
         padding: 50px 130px;
+    }
+    .teams-section{
+        flex-direction: column;
+    }
+    .teams-content{
+        padding: 40px 140px;
     }
 }
