--- a/styles/architect.css
+++ b/styles/architect.css
@@ -139,7 +139,57 @@ main{
 
 /* facts section styles */
 
+.facts .section-title{
+    margin-bottom: 0px;
+}
 
+.facts .text-light-gray{
+    margin-bottom: 100px;
+}
+
+.facts-card-container{
+    padding: 0 40px;
+}
+
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px;
+}
+
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: var(--Dark-02, #424242);
+    font-weight: 600;
+    margin: 5px 0;
+}
+
+.facts-card-container .card-title{
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--Dark-03, #727272);
+    margin-top: 3px;
+}
+
+.facts-card-container{
+    display: flex;
+    gap: 7.7rem;
+    justify-content: space-around;
+    margin-bottom: 160px;
+}
+
+/* sponsor section styles */
+
+.sponsors{
+    text-align: center;
+}
+
+.sponsors-img-container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
 
 /* responsive media */
 
@@ -156,7 +206,33 @@ main{
     .teams-content{
         padding: 20px 40px;
     }
-
+    .facts-card-container{
+        flex-direction: column;
+        gap: 2.5rem;
+        margin-bottom: 100px;
+        padding: 0 90px;
+    }
+    .facts .text-light-gray{
+        margin-bottom: 50px;
+    }
+    .facts .facts-header{
+        padding: 0 40px;
+    }
+    .sponsors .section-title{
+        margin-bottom: 10px;
+    }
+    .sponsors-header{
+        padding: 0 20px;
+    }
+    .sponsors-img-container{
+        flex-direction: column;
+        margin-top: 40px;
+        align-items: center;
+        gap: 20px;
+    }
+    .sponsors-img-container img{
+        width: 160px;
+    }
 }
 
 @media screen and (min-width: 577px) and (max-width: 992px){
@@ -170,6 +246,32 @@ main{
         padding: 20px 50px;
         margin-bottom: 20px;
     }
+    .facts-card-container{
+        display: grid;
+        grid-template-columns: repeat(2, 0.5fr);
+        padding: 0 130px;
+        gap: 1.5rem;
+        margin-bottom: 100px;
+    }
+    .facts .text-light-gray{
+        margin-bottom: 50px;
+    }
+    .facts .facts-header{
+        padding: 0 40px;
+    }
+    .sponsors .section-title{
+        margin-bottom: 20px;
+    }
+    .sponsors-img-container img{
+        width: 170px;
+    }
+    .sponsors-img-container{
+        flex-direction: column;
+        margin-top: 40px;
+        align-items: center;
+        gap: 20px;
+    }
+
 }
 
 @media screen and (min-width: 992px) and (max-width: 1370px){
@@ -182,4 +284,29 @@ main{
     .teams-content{
         padding: 40px 140px;
     }
+    .facts .facts-header{
+        padding: 0 140px;
+    }
+    .facts .facts-card-container{
+        justify-content: space-between;
+        gap: 5px;
+        margin-bottom: 120px;
+       }
+    .facts .text-light-gray{
+        margin-bottom: 50px;
+    }
+    .sponsors .section-title{
+        margin-bottom: 30px;
+    }
+    .sponsors-img-container img{
+        width: 200px;
+    }
+    .sponsors-img-container{
+        margin-top: 60px;
+        align-items: center;
+        gap: 20px;
+        padding: 0 70px;
+        
+    }
+    
 }
